# bennorth-literate-git

./: .gitignore  COPYING  README-short.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
literategit/: __init__.py  dump_all_trees.py  node.html.tmpl
literategit/cli/: dump_all_trees.py  render.py
tests/: test_sample.py
