[project]
name = "literategit"
version = "0.5.0"
description = "Render a structured git history as an interactive web page"
authors = [
    {name = "Ben North",email = "ben@redfrontdoor.org"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
