[project]
name = "literategit"
version = "0.5.0"
description = "Render a structured git history as an interactive web page"
authors = [
    {name = "Ben North",email = "ben@redfrontdoor.org"}
]
license = {text = "GPLv3"}
readme = "README-short.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pygit2 (>=1.17.0,<2.0.0)",
    "markdown2 (>=2.5.2,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)"
]

[project.scripts]
git-literate-render = "literategit.cli:render"
git-dump-all-trees = "literategit.cli:dump_all_trees"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
beautifulsoup4 = "^4.12.3"
flake8 = "^7.1.1"

